examples/test/testpolicy17507.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17507
  namespace: namespace46
spec:
  podSelector:
    matchLabels:
      key26: value45
      key30: value45
      key2: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value14
          key12: value11
          key33: value11
      podSelector:
        matchLabels:
          key13: value20
          key21: value22
          key11: value32
